[gd_scene load_steps=7 format=3 uid="uid://ck2c58key4r5s"]

[ext_resource type="Texture2D" uid="uid://dvw4w0b5w0sk6" path="res://sprites/time_gui.png" id="1_s1rui"]
[ext_resource type="Script" uid="uid://cfowy081vh8ix" path="res://time_ui.gd" id="1_ymhmv"]
[ext_resource type="LabelSettings" uid="uid://c7xcdxwgm2kec" path="res://styles/clockfont.tres" id="2_xi4ts"]
[ext_resource type="Texture2D" uid="uid://cvsl3ty2hmwmj" path="res://sprites/buttons.png" id="4_erxgb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ymhmv"]
atlas = ExtResource("1_s1rui")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi4ts"]
atlas = ExtResource("1_s1rui")
region = Rect2(32, 0, 17, 17)

[node name="timeGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.989001)
script = ExtResource("1_ymhmv")

[node name="Bg" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_top = 1.0
offset_right = 117.0
offset_bottom = 75.0
texture = ExtResource("1_s1rui")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Bg2" type="NinePatchRect" parent="."]
modulate = Color(0.278466, 0.57358, 0.530892, 1)
layout_mode = 0
offset_top = 1.0
offset_right = 117.0
offset_bottom = 75.0
texture = ExtResource("1_s1rui")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="DayControl" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 16.0
offset_top = 8.08897
offset_right = 91.0
offset_bottom = 32.089

[node name="day" type="Label" parent="DayControl"]
visible = false
layout_mode = 0
offset_left = 35.0
offset_top = 5.0
offset_right = 71.0
offset_bottom = 28.0
text = "999"
label_settings = ExtResource("2_xi4ts")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="DayControl"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 29.0
offset_bottom = 27.0
texture = SubResource("AtlasTexture_ymhmv")
metadata/_edit_lock_ = true

[node name="clock_bg" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 7.07785
offset_right = 115.0
offset_bottom = 37.0778
texture = ExtResource("1_s1rui")
region_rect = Rect2(16, 16, 16, 16)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ClockControl" type="Control" parent="clock_bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -14.5
offset_right = 47.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2

[node name="time" type="Label" parent="clock_bg/ClockControl"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.55561
offset_right = 81.0
offset_bottom = 27.5556
text = "12:34"
label_settings = ExtResource("2_xi4ts")

[node name="space" type="Label" parent="clock_bg/ClockControl"]
visible = false
layout_mode = 0
offset_left = 51.0
offset_top = 4.97822
offset_right = 91.0
offset_bottom = 27.9782
text = ":"
label_settings = ExtResource("2_xi4ts")

[node name="minutes" type="Label" parent="clock_bg/ClockControl"]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = 4.97822
offset_right = 96.0
offset_bottom = 27.9782
text = "00"
label_settings = ExtResource("2_xi4ts")

[node name="TextureRect" type="TextureRect" parent="clock_bg/ClockControl"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = 3.0
offset_right = 27.0
offset_bottom = 30.0
texture = SubResource("AtlasTexture_xi4ts")

[node name="Button control" type="Control" parent="."]
anchors_preset = 0

[node name="play_button" type="TextureButton" parent="Button control"]
clip_contents = true
layout_mode = 0
offset_right = 147.0
offset_bottom = 45.0
texture_normal = ExtResource("4_erxgb")

[node name="fast_forward__button" type="TextureButton" parent="Button control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="skip_button" type="TextureButton" parent="Button control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
